--- a/style.css
+++ b/style.css
@@ -1,9 +1,30 @@
 body {
     display: flex;
+    height: 100vh;   
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    background: url('./img/wallpaper.jpg'); 
+    background-size: cover;  
+    margin: 0;  
 }
 
 canvas {
     background-color: black;
+    border-radius: 16px;    
+    box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
 }
+
+h1 {
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 60px;
+    font-weight: 100;
+    border-radius: 16px; 
+    color: rgb(228, 165, 107);
+    box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-bottom: 7px;      
+}
+
+/* Hintergrundbild von Vecteezy.com */
