--- a/style.css
+++ b/style.css
@@ -1,30 +1,72 @@
 body {
-    display: flex;
-    height: 100vh;   
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: url('./img/wallpaper.jpg'); 
-    background-size: cover;  
-    margin: 0;  
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url("./img/wallpaper.jpg");
+  background-size: cover;
+  margin: 0;
 }
 
 canvas {
-    background-color: black;
-    border-radius: 16px;    
-    box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
+  background-color: black;
+  border-radius: 16px;
+  box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
 }
 
 h1 {
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 60px;
-    font-weight: 100;
-    border-radius: 16px; 
-    color: rgb(228, 165, 107);
-    box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-bottom: 7px;      
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  border-radius: 16px;
+  color: rgb(240, 209, 180);
+  box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
+  padding: 10px;
+  margin-bottom: 7px;
+  margin-top: 7px;
+  
+}
+
+h2 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: rgb(240, 209, 180);
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  font-size: 22px;
+  gap: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.game-introducing {
+  display: flex;
+  flex-wrap: wrap;
+  width: 720px;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 5px;
+  border-radius: 16px;
+  box-shadow: 4px 4px 10px 0 rgb(27, 27, 27); 
+}
+
+.game-instructions-left {
+  width: 35px;
+  transform: rotate(90deg);
+}
+
+.game-instructions {
+  width: 35px;
+  height: 30px;
+}
+
+.game-instructions-right {
+  width: 35px;
+  transform: rotate(270deg);
 }
 
 /* Hintergrundbild von Vecteezy.com */
+/* icons from flaticon.com/free-icons */
