--- a/style.css
+++ b/style.css
@@ -9,37 +9,84 @@ body {
   margin: 0;
 }
 
-canvas {
+.d-none {
+  display: none;
+}
+
+canvas,
+.start-screen {
   background-color: black;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
 }
 
+.start-screen-main {
+  display: flex;
+  justify-content: center;
+}
+
+.start-screen {
+  position: relative;
+  width: 720px;
+  height: 480px;
+}
+
+.start-orientation {
+  width: 720px;
+  position: fixed;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between; 
+}
+
+/* für den startbutton */
+@keyframes rotating {
+  0% {
+    rotate: 0;
+  }
+  100% {
+    rotate: 1turn;
+  }
+}
+
+.start-btn {
+  border-radius: 45px;
+  width: 50px;
+  transition: width 0.3s;
+  padding: 10px;
+  cursor: pointer;
+  filter: grayscale(1);
+}
+
+.start-btn:hover {
+  width: 60px;
+  filter: grayscale(0);
+}
+
+
 h1 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 60px;
   font-weight: 100;
   border-radius: 16px;
-  color: rgb(240, 209, 180);
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
   padding: 10px;
-  margin-bottom: 7px;
-  margin-top: 7px;
-  
 }
 
+h1,
 h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: rgb(240, 209, 180);
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+h2 {
   font-weight: 400;
   display: flex;
   align-items: center;
   font-size: 22px;
   gap: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
 }
 
 .game-introducing {
@@ -50,7 +97,7 @@ h2 {
   justify-content: space-around;
   margin-top: 5px;
   border-radius: 16px;
-  box-shadow: 4px 4px 10px 0 rgb(27, 27, 27); 
+  box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
 }
 
 .game-instructions-left {
