--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ canvas, .game-over-img, .win-img,
   background-color: black;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
+  display: block;
 }
 
 .start-screen-main {
@@ -53,14 +54,14 @@ canvas, .game-over-img, .win-img,
   filter: grayscale(0);
 }
 
-
-h1 {
-  font-size: 60px;
+h1 { 
+  /* font-size: 60px; */
   font-weight: 100;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
   padding-left: 10px;
   padding-right: 10px; 
+  padding-bottom: 5px;
 }
 
 h1,
@@ -70,6 +71,7 @@ h2 {
   color: rgb(240, 209, 180);
   margin-top: 5px;
   margin-bottom: 5px;
+  text-shadow: 4px 2px 2px rgba(0,0,0,0.5);
 }
 
 h2 {
@@ -92,8 +94,9 @@ h2 {
 }
 
 .restart-game-part {
-  gap: 5px;
+  gap: 7px;
   justify-content: center; 
+  display: flex;
 }
 
 .game-instructions-left { 
@@ -121,6 +124,18 @@ h2 {
   filter: grayscale(0);
 }
 
+/* smartphones ---------------*/
+@media only screen and (max-width: 720px) {
+  canvas, .start-screen, .game-over-img, .win-img, .game-introducing, .restart-game-part {
+    width: 100%;
+  }
+}
+/* smartphones ---------------*/
+@media only screen and (max-height: 480px) {
+  canvas, .start-screen, .game-over-img, .win-img, .game-introducing, .restart-game-part {
+    height: 100vh;
+  }
+}
 
 /* Hintergrundbild von Vecteezy.com */
 /* icons from flaticon.com/free-icons */
