added mute funktion. now its possible to mute all audio in game

--- a/style.css
+++ b/style.css
@@ -137,5 +137,15 @@ h2 {
   }
 }
 
+@media (max-width: 719px) {
+  .game-introducing {
+    flex-wrap: wrap;
+  }
+
+  .start-orientation {
+    width: 100%;
+  }
+}
+
 /* Hintergrundbild von Vecteezy.com */
 /* icons from flaticon.com/free-icons */
