--- a/style.css
+++ b/style.css
@@ -4,21 +4,29 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url("./img/wallpaper.jpg");
+  background: url('./img/wallpaper.jpg');
   background-size: cover;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .d-none {
   display: none !important;
 }
 
-canvas, .game-over-img, .win-img, 
+canvas,
+.game-over-img,
+.win-img,
 .start-screen {
   background-color: black;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
-  display: block;
+  display: block;  
+}
+
+.mobile-view-main {
+  display: none;
 }
 
 .start-screen-main {
@@ -26,7 +34,8 @@ canvas, .game-over-img, .win-img,
   justify-content: center;
 }
 
-.start-screen, .game-over-img,
+.start-screen,
+.game-over-img,
 .win-img {
   position: relative;
   width: 720px;
@@ -38,10 +47,10 @@ canvas, .game-over-img, .win-img,
   position: fixed;
   z-index: 1;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
-.start-btn {  
+.start-btn {
   width: 50px;
   transition: width 0.3s;
   padding: 10px;
@@ -54,24 +63,24 @@ canvas, .game-over-img, .win-img,
   filter: grayscale(0);
 }
 
-h1 { 
+h1 {
   /* font-size: 60px; */
   font-weight: 100;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
   padding-left: 10px;
-  padding-right: 10px; 
+  padding-right: 10px;
   padding-bottom: 5px;
 }
 
 h1,
 h2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: rgb(240, 209, 180);
   margin-top: 5px;
   margin-bottom: 5px;
-  text-shadow: 4px 2px 2px rgba(0,0,0,0.5);
+  text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 h2 {
@@ -82,7 +91,8 @@ h2 {
   gap: 5px;
 }
 
-.game-introducing, .restart-game-part {
+.game-introducing,
+.restart-game-part {
   display: flex;
   flex-wrap: wrap;
   width: 720px;
@@ -95,19 +105,27 @@ h2 {
 
 .restart-game-part {
   gap: 7px;
-  justify-content: center; 
+  justify-content: center;
   display: flex;
 }
 
-.game-instructions-left { 
+.game-instructions-left,
+.move-Left {
   transform: rotate(90deg);
 }
 
-.game-instructions, .game-instructions-left, .game-instructions-right {
-  width: 35px;  
+.jump {
+  transform: rotate(180deg);
 }
 
-.game-instructions-right { 
+.game-instructions,
+.game-instructions-left,
+.game-instructions-right {
+  width: 35px;
+}
+
+.game-instructions-right,
+.move-Right {
   transform: rotate(270deg);
 }
 
@@ -126,24 +144,99 @@ h2 {
 
 /* smartphones ---------------*/
 @media only screen and (max-width: 720px) {
-  canvas, .start-screen, .game-over-img, .win-img, .game-introducing, .restart-game-part {
+  canvas,
+  .start-screen,
+  .game-over-img,
+  .win-img,
+  .game-introducing,
+  .restart-game-part,
+  .mobile-view-main {
     width: 100%;
   }
 }
+
 /* smartphones ---------------*/
 @media only screen and (max-height: 480px) {
-  canvas, .start-screen, .game-over-img, .win-img, .game-introducing, .restart-game-part {
+  canvas,
+  .start-screen,
+  .game-over-img,
+  .win-img,
+  .game-introducing,
+  .restart-game-part,
+  .mobile-view-main {
     height: 100vh;
   }
 }
 
+/* Mobile-View */
 @media (max-width: 719px) {
+.canvas-relative {
+  position: relative;
+}
+
+.relative-div {  
+  /* width: 720px;
+  height: 480px; */
+  position: relative;
+}
+
+  .main-font {
+    display: none;
+  }
+
   .game-introducing {
     flex-wrap: wrap;
+    display: none;
   }
 
   .start-orientation {
     width: 100%;
+  }
+
+  .mobile-view-main {    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;   
+    z-index: 1;
+    /* height: 480px; */  
+    bottom: 10px;
+    left: 0px;
+    right: 0px;
+  }
+
+  .mobile-view-top {
+    display: flex;
+    justify-content: center;   
+  }
+
+  .mobile-view-bottom {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .move-Left,
+  .move-Right,
+  .jump,
+  .bottle-throw,
+  .play-icon,
+  .volume-icon {
+    width: 45px;
+    height: 45px;
+  }
+
+  .left-hand,
+  .right-hand,
+  .play-icon,
+  .volume-icon {
+    display: flex;
+    padding-left: 16px;
+    padding-right: 16px;
+    gap: 16px;
+  }
+
+  .restart-game-part {
+    display: none;
   }
 }
 
