--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ h2 {
 /* smartphones ---------------*/
 @media only screen and (max-width: 720px) {
   canvas,
+  body,
   .start-screen,
   .game-over-img,
   .win-img,
@@ -167,6 +168,7 @@ h2 {
 /* smartphones ---------------*/
 @media only screen and (max-height: 480px) {
   canvas,
+  body,
   .start-screen,
   .game-over-img,
   .win-img,
@@ -180,6 +182,10 @@ h2 {
 
 /* Mobile-View */
 @media (max-width: 719px) {
+  .main-font-class {
+    display: none;
+  }
+
   .canvas-relative {
     position: relative;
   }
@@ -202,16 +208,17 @@ h2 {
     flex-direction: row;
     display: flex;
     height: 475px;
-    align-content: flex-end;    
+    align-content: flex-end;
   }
 
-  .game-instructions-right, .game-instructions-left {
-    display: none;    
+  .game-instructions-right,
+  .game-instructions-left {
+    display: none;
   }
 
   .restart-icon {
     filter: none;
-    width: 50px;      
+    width: 50px;
   }
 
   h2 {
