--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ h2 {
   filter: grayscale(0);
 }
 
+.mobileScreen {
+  display: none;
+}
+
 /* smartphones ---------------*/
 @media only screen and (max-width: 720px) {
   canvas,
@@ -188,8 +192,39 @@ h2 {
   }
 }
 
+@media (max-width: 1024px) and (orientation: landscape) {
+  .mobileScreen {
+    display: none !important;
+  }  
+}
+
+@media (max-width: 1024px) and (orientation: landscape) and (max-height: 600px) {  
+  .mobileScreen {
+    display: none !important;
+  }
+}
+
 /* Mobile-View */
 @media (max-width: 719px) {
+  .mobileScreen {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 150;
+    background-color: #cacaca;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  p {
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
   .canvas-relative {
     position: relative;
   }
