--- a/style.css
+++ b/style.css
@@ -154,6 +154,29 @@ h2 {
   display: none;
 }
 
+.impressum {
+  margin-top: 10px;
+  display: flex;
+  gap: 20px;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none !important;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a:hover {
+  cursor: pointer;
+  color: rgb(210, 210, 210);
+}
+
+p {
+  margin-top: 5px;
+}
+
 /* smartphones ---------------*/
 @media only screen and (max-width: 720px) {
   canvas,
@@ -192,25 +215,17 @@ h2 {
   }
 }
 
-@media (max-width: 1024px) and (orientation: landscape) {
-  .mobileScreen {
-    display: none !important;
-  }  
-}
-
-@media (max-width: 1024px) and (orientation: landscape) and (max-height: 600px) {  
-  .mobileScreen {
-    display: none !important;
+/* Landscape mode for mobile devices ------------- */
+@media (max-width: 1024px) and (orientation: landscape) and (max-height: 600px) {
+  .impressum {
+    display: none;
   }
-}
 
-/* Mobile-View */
-@media (max-width: 719px) {
   .mobileScreen {
-    width: 100vw;
+    display: none !important;
+    width: 100%;
     height: 100vh;
     position: absolute;
-    display: flex;
     flex-direction: column;
     z-index: 150;
     background-color: #cacaca;
@@ -219,36 +234,48 @@ h2 {
     text-align: center;
   }
 
-  p {
-    font-size: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-
-  .canvas-relative {
-    position: relative;
-  }
-
-  .relative-div {
-    position: relative;
-  }
-
   .game-introducing {
-    flex-wrap: wrap;
     display: none;
+    flex-wrap: wrap;
   }
 
-  .start-orientation {
-    width: 100%;
+  .mobile-view-main {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    z-index: 1;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    height: 11vh;
+  }
+
+  .move-Left,
+  .move-Right,
+  .jump,
+  .bottle-throw {
+    width: 45px;
+    height: 45px;
+  }
+
+  .left-hand,
+  .right-hand {
+    display: flex;
+    padding-left: 16px;
+    padding-right: 16px;
+    gap: 16px;
   }
 
   .restart-game-part {
+    border: none;
     position: absolute;
-    flex-direction: row;
+    height: 100vh;
     display: flex;
-    height: 350px;
     align-content: flex-end;
+    /* padding-bottom: 50px; */
+    flex-direction: row;
     box-shadow: none;
+    height: 400px;
   }
 
   .game-instructions-right,
@@ -261,58 +288,61 @@ h2 {
     width: 50px;
   }
 
-  h2 {
-    padding-bottom: 16px;
-  }
-
   .restart-icon:hover {
     width: 50px;
   }
 
-  .mobile-view-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: absolute;
-    z-index: 1;
-    bottom: 10px;
-    left: 0px;
-    right: 0px;
+  .canvas-relative {
+    position: relative;
   }
 
-  .mobile-view-top {
+  .relative-div {
+    position: relative;
+  }
+
+  .start-orientation {
+    z-index: 1;
     display: flex;
+    position: absolute;
     justify-content: center;
   }
 
-  .mobile-view-bottom {
+  p {
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif;
+  }
+
+  h2 {
+    padding-bottom: 16px;
+  }
+}
+
+@media (max-width: 719px) {
+  .mobileScreen {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    z-index: 150;
+    background-color: #cacaca;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
-  .move-Left,
-  .move-Right,
-  .jump,
-  .bottle-throw,
-  .play-icon,
-  .volume-icon {
-    width: 45px;
-    height: 45px;
+  p {
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+      Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+      sans-serif;
   }
 
-  .left-hand,
-  .right-hand,
-  .play-icon,
-  .volume-icon {
-    display: flex;
-    padding-left: 16px;
-    padding-right: 16px;
-    gap: 16px;
+  .turndevice {
+    width: 100px;
   }
-
-  /* .restart-game-part {
-    display: none;
-  } */
 }
 
 @media (max-width: 520px) {
@@ -320,6 +350,3 @@ h2 {
     font-size: 25px;
   }
 }
-
-/* Hintergrundbild von Vecteezy.com */
-/* icons from flaticon.com/free-icons */
