--- a/imprint&policy.css
+++ b/imprint&policy.css
@@ -17,6 +17,7 @@ h3 {
   font-weight: 100;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 h1 {
