--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ h2 {
   margin-top: 10px;
   display: flex;
   gap: 20px;
-  text-decoration: none;
+  text-shadow: 4px 2px 2px rgba(0, 0, 0, 1);
 }
 
 a {
