--- a/imprint&policy.css
+++ b/imprint&policy.css
@@ -7,7 +7,14 @@ body {
   background: url('./img/wallpaper.jpg');
   background-size: cover;
   margin: 0;
-  color: white;
+  color: white;  
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);  
+}
+
+.privacypolicy-top {
+  padding-top: 80px;
 }
 
 h1,
@@ -59,4 +66,24 @@ p {
 .privacypolicy {
     height: 90%;
     padding: 20px;
+}
+
+@media (max-width: 720px) {
+  .mobile-view {
+    padding-top: 50px;
+  }
+
+  h1 {
+    font-size: 50px;
+  }
+
+  h2 {
+    color: lightgray;
+    font-size: 25px;
+  }
+
+  h3 {
+    margin-top: 0px;
+    font-size: 30px
+  }
 }
