--- a/style.css
+++ b/style.css
@@ -31,7 +31,17 @@ canvas,
 
 .start-screen-main {
   display: flex;
-  justify-content: center;
+  position: relative;
+}
+
+.start-screen-icons {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+}
+
+.game-over-imgs {
+  position: absolute;
 }
 
 .start-screen,
@@ -47,6 +57,7 @@ canvas,
   position: fixed;
   z-index: 1;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -59,7 +70,6 @@ canvas,
 }
 
 .start-btn:hover {
-  width: 60px;
   filter: grayscale(0);
 }
 
@@ -71,7 +81,7 @@ canvas,
   align-items: center;
 }
 
-h1 { 
+h1 {
   font-weight: 100;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
@@ -101,6 +111,7 @@ h2 {
 .game-introducing,
 .restart-game-part {
   display: flex;
+  position: absolute;
   flex-wrap: wrap;
   width: 720px;
   align-items: center;
@@ -108,6 +119,7 @@ h2 {
   margin-top: 5px;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
+  bottom: 0;
 }
 
 .restart-game-part {
@@ -153,13 +165,6 @@ h2 {
   display: none;
 }
 
-.impressum {
-  margin-top: 10px;
-  display: flex;
-  gap: 20px;
-  text-shadow: 4px 2px 2px rgba(0, 0, 0, 1);
-}
-
 a {
   text-decoration: none !important;
   color: white;
@@ -169,7 +174,7 @@ a {
 
 a:hover {
   cursor: pointer;
-  color: rgb(210, 210, 210);
+  color: rgb(255, 219, 0);
 }
 
 p {
@@ -181,6 +186,7 @@ p {
   canvas,
   body,
   .start-screen,
+  .start-orientation,
   .game-over-img,
   .win-img,
   .game-introducing,
@@ -216,10 +222,6 @@ p {
 
 /* Landscape mode for mobile devices ------------- */
 @media (max-width: 1024px) and (orientation: landscape) and (max-height: 600px) {
-  .impressum {
-    display: none;
-  }
-
   .mobileScreen {
     display: none !important;
     width: 100%;
@@ -234,8 +236,9 @@ p {
   }
 
   .game-introducing {
-    display: none;
-    flex-wrap: wrap;
+    display: flex;
+    bottom: 0px;
+    align-content: flex-end;
   }
 
   .mobile-view-main {
@@ -270,15 +273,10 @@ p {
     position: absolute;
     height: 100vh;
     display: flex;
-    align-content: flex-end;    
+    align-content: flex-end;
     flex-direction: row;
     box-shadow: none;
     height: 370px;
-  }
-
-  .game-instructions-right,
-  .game-instructions-left {
-    display: none;
   }
 
   .restart-icon {
@@ -302,7 +300,8 @@ p {
     z-index: 1;
     display: flex;
     position: absolute;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
   }
 
   p {
@@ -313,7 +312,7 @@ p {
   }
 
   h2 {
-    padding-bottom: 16px;
+    padding-bottom: 10px;
   }
 }
 
