--- a/style.css
+++ b/style.css
@@ -140,17 +140,11 @@ h2 {
   flex-wrap: wrap;
   width: 720px;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   margin-top: 5px;
   border-radius: 16px;
   box-shadow: 0px 0px 10px 0 rgb(27, 27, 27);
   bottom: 0;
-}
-
-.restart-game-part {
-  gap: 7px;
-  justify-content: center;
-  display: flex;
 }
 
 .game-instructions-left,
@@ -181,7 +175,7 @@ h2 {
 }
 
 .restart-icon:hover {
-  width: 45px;
+  width: 40px;  
   filter: grayscale(0);
 }
 
@@ -281,6 +275,13 @@ p {
     align-content: flex-end;
   }
 
+  .restart-game-part {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 16px;
+  }
+
   .mobile-view-main {
     display: flex;
     justify-content: space-between;
@@ -335,10 +336,6 @@ p {
       sans-serif;
     margin: 5px;
     margin-top: 0px;
-  }
-
-  h2 {
-    padding-bottom: 10px;
   }
 }
 
