--- a/style.css
+++ b/style.css
@@ -108,11 +108,11 @@ canvas,
 
 h1 {
   font-weight: 100;
-  border-radius: 16px;
-  box-shadow: 4px 4px 10px 0 rgb(27, 27, 27);
+  border-radius: 16px; 
+  box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.5);
   padding-left: 10px;
   padding-right: 10px;
-  padding-bottom: 5px;
+  padding-bottom: 5px;   
 }
 
 h1,
@@ -133,18 +133,23 @@ h2 {
   gap: 5px;
 }
 
-.game-introducing,
-.restart-game-part {
+.restart-game-part {  
+  justify-content: center;
+  margin-bottom: 15px; 
+}
+
+.game-introducing { 
+  justify-content: space-around; 
+}
+
+.restart-game-part, .game-introducing {
   display: flex;
   position: absolute;
-  flex-wrap: wrap;
   width: 720px;
   align-items: center;
-  justify-content: center;
-  margin-top: 5px;
-  border-radius: 16px;
-  box-shadow: 0px 0px 10px 0 rgb(27, 27, 27);
-  bottom: 0;
+  border-radius: 16px;  
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.5);
+  bottom: 0px;
 }
 
 .game-instructions-left,
@@ -175,7 +180,7 @@ h2 {
 }
 
 .restart-icon:hover {
-  width: 40px;  
+  width: 40px;
   filter: grayscale(0);
 }
 
@@ -204,9 +209,10 @@ p {
 }
 
 .privacy {
+  margin-top: 5px;
   display: flex;
   border-radius: 16px;
-  box-shadow: 0px 1px 3px 0px rgb(78, 78, 78);
+  box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.5);
 }
 
 @media (min-width: 1025px) {
@@ -271,8 +277,12 @@ p {
 
   .game-introducing {
     display: flex;
-    bottom: 0px;
-    align-content: flex-end;
+    flex-wrap: wrap;
+    align-content: flex-end;           
+  }
+
+  h2 {
+    font-size: larger;
   }
 
   .restart-game-part {
@@ -330,12 +340,10 @@ p {
   }
 
   p {
-    font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
       Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
       sans-serif;
-    margin: 5px;
-    margin-top: 0px;
+    margin: 10px;
   }
 }
 
