--- a/imprint&policy.css
+++ b/imprint&policy.css
@@ -1,55 +1,57 @@
 body {
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: url('./img/wallpaper.jpg');
-  background-size: cover;
-  margin: 0;
-  color: white;  
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-  Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);  
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: url('./img/wallpaper.jpg');
+    background-size: cover;
+    margin: 0;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
+    text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .privacypolicy-top {
-  padding-top: 80px;
+    padding-top: 80px;
 }
 
 h1,
 h2,
 h3 {
-  color: white;
-  font-weight: 100;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    font-weight: 100;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+        sans-serif;
     text-shadow: 4px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 h1 {
-  font-size: 50px;
-  margin-top: 0;
-  margin-bottom: 0;
+    font-size: 50px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 h2 {
     display: flex;
     justify-content: center;
-  font-size: 35px;
-  margin: 0;
+    font-size: 35px;
+    margin: 0;
 }
 
 h3 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
 }
 
 p {
-  margin: 0;
+    margin: 0;
 }
 
 .back-to-main {
@@ -69,21 +71,21 @@ p {
 }
 
 @media (max-width: 720px) {
-  .mobile-view {
-    padding-top: 50px;
-  }
+    .mobile-view {
+        padding-top: 50px;
+    }
 
-  h1 {
-    font-size: 50px;
-  }
+    h1 {
+        font-size: 50px;
+    }
 
-  h2 {
-    color: lightgray;
-    font-size: 25px;
-  }
+    h2 {
+        color: lightgray;
+        font-size: 25px;
+    }
 
-  h3 {
-    margin-top: 0px;
-    font-size: 30px
-  }
+    h3 {
+        margin-top: 0px;
+        font-size: 30px;
+    }
 }
